updated if statement for bootstrap.css

--- a/templates/common/app/index.html
+++ b/templates/common/app/index.html
@@ -10,6 +10,9 @@
     <!-- bower:css -->
     <!-- endbower -->
     <!-- endbuild -->
+    <% if (bootstrap) { %>
+      <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" rel="stylesheet">
+    <% } %>
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
